# ncsu_finmath_summer_2026

./: .gitignore  README.md  build_weekly.py  make_illustrations.py
code/: README.md  requirements.txt
code/common/: __init__.py  coincall_client.py
code/week02_microstructure/: orderbook.py  roll_estimator.py
code/week03_avellaneda_stoikov/: as_engine.py
code/week04_control/: merton.py
code/week05_engine/: backtest.py  intensity_mle.py
code/week06_vol_surface/: bs_greeks.py  svi.py
code/week07_fast_computation/: README.md  run_fastmm.py
code/week07_fast_computation/cpp/: CMakeLists.txt  bindings.cpp  cos.cpp  cos.hpp  main.cpp
code/week08_hedging/: multi_greek_hedge.py
code/week09_backtest/: attribution.py
code/week10_advanced/: structured_products.py
weekly_presentations/: week01_introduction.pptx  week01_introduction.tex  week02_microstructure.pptx  week02_microstructure.tex  week03_avellaneda_stoikov.pptx  week03_avellaneda_stoikov.tex  week04_control.pptx  week04_control.tex  week05_engine_milestone1.pptx  week05_engine_milestone1.tex  week06_vol_surface.pptx  week06_vol_surface.tex  week07_fast_computation_milestone2.pptx  week07_fast_computation_milestone2.tex  week08_options_mm_hedging.pptx  week08_options_mm_hedging.tex  week09_backtesting_taker_milestone3.pptx  week09_backtesting_taker_milestone3.tex  week10_advanced_structured_products.pptx  week10_advanced_structured_products.tex
